--- a/frontend/src/app/session/session.component.scss
+++ b/frontend/src/app/session/session.component.scss
@@ -1,5 +1,7 @@
 @import '../../../public/css/variables';
 .session-tile {
+    z-index: $session-z-index;
+    position: relative;
     box-sizing: border-box;
     background: white;
     max-width: 180px;
